@@ -1,3 +1,8 @@
+2007-12-17  Lars Hecking  <lhecking@users.sourceforge.net>
+
+	* share/Makefile.am: Gnuplot is generated by make and deleted by
+	'make clean'. Bring variable names in line with xorg.
+
 2007-12-17  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/util.c (int_error): Fix incorrect handling of va_list.
